# belajar-rust

./: .gitignore
belajar-rust-axum/: Cargo.toml
belajar-rust-axum/src/: main.rs
belajar-rust-concurrency/: Cargo.toml
belajar-rust-concurrency/src/: main.rs
belajar-rust-config/: Cargo.toml  application.json  application.toml  application.yaml
belajar-rust-config/src/: main.rs
belajar-rust-dasar/src/: main.rs
belajar-rust-database/: Cargo.toml  test.json
belajar-rust-database/migrations/: 20250825045847_create_table_categories.up.sql  20250825045858_create_table_brands.down.sql  20250825045858_create_table_brands.up.sql
belajar-rust-database/src/: main.rs
belajar-rust-datetime/: Cargo.toml
belajar-rust-datetime/src/: main.rs
belajar-rust-library/: Cargo.toml
belajar-rust-library/src/: lib.rs
belajar-rust-logging/: Cargo.toml  log4rs.yaml
belajar-rust-logging/src/: main.rs
belajar-rust-redis/: Cargo.toml
belajar-rust-redis/src/: main.rs
belajar-rust-serialization/: Cargo.toml
belajar-rust-serialization/src/: main.rs
belajar-rust-template/: Cargo.toml
belajar-rust-template/src/: main.rs
belajar-rust-template/templates/: blog.mustache  footer.mustache  person.mustache  with-hello.mustache
belajar-rust-template/templates/layouts/: blog.mustache  footer.mustache  header.mustache
belajar-rust-unit-test/: Cargo.toml
belajar-rust-unit-test/hello/src/: lib.rs
belajar-rust-unit-test/hello/tests/: say_hello.rs
belajar-rust-unit-test/src/: main.rs
belajar-rust-validation/: Cargo.toml
belajar-rust-validation/src/: main.rs
