[package]
name = "belajar-rust-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-test = "18.0.2"
env_logger = "0.11.8"
http = "1.3.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
